# passgen-embedded

passgen-embedded/: Cargo.toml  passgen_embedded.h
passgen-embedded/src/: lib.rs  symbols.rs
password-generator/: application.fam
