[package]
name = "passgen-embedded"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
rand = { version = "0.8.5", features = ["small_rng"], default-features = false }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
#strip = true  # Automatically strip symbols from the binary.
#opt-level = "z"
#lto = true
#codegen-units = 1
